# visible-sector-collapse-prototype

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: paper_v7.yml  realdata_smoke_example.yml  realmap_lowell_example.yml
data/: README.md  public_sources.yml
docs/: api_overview.md  citation_notes.md  public_data_sources.md  real_data_readiness.md  real_data_smoke_test.md  real_map_lowell_extraction.md  release_audit_v0.3.0.md
notebooks/: 01_projection_check.ipynb  02_toy_covariance.ipynb  03_estimator_recovery.ipynb  04_sensitivity_scan.ipynb  reproduce_paper_results.ipynb
results/paper_v7/: covariance_summary.csv  lambda_fpaired_scan.csv  mc_recovery_117mode.csv  mc_recovery_6x6.csv  projection_check.csv  reproduction_manifest.json
scripts/: extract_lowell_alms.py  realdata_smoke_test.py  run_prototype.py
src/viscollapse/: __init__.py  camb_adapter.py  class_adapter.py  constants.py  covariance.py  data_sources.py  download.py  estimator.py  figures.py  manifests.py  paper.py  projections.py  realdata_notes.py  realdata_smoke.py  realmap_harmonics.py  scans.py  utils.py
tests/: test_covariance.py  test_download.py  test_estimator.py  test_optional_adapters.py  test_paper_reproduction.py  test_projections.py  test_realdata_smoke.py  test_realdata_sources.py  test_realmap_harmonics.py  test_scans.py
